k8s/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres #<service selector must match pod's label>
  ports:
    - port: 5432
      targetPort: 5432 #<service targetPort must match pod's containerPort>
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres 
  template:
    metadata:
      labels:
        app: postgres #<pod's label must match service selector>
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432 #<must match with service targetPort>
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: '128Mi'
              cpu: '200m'
            limits:
              memory: '256Mi'
              cpu: '500m'
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
