k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: r8-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/limit-rps: '10'
    nginx.ingress.kubernetes.io/limit-burst-multiplier: '3'
spec:
  rules:
    - host: r8.local
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: r8
                port:
                  number: 4002
          - path: /search/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: searchengine
                port:
                  number: 4001
